[package]
name = "vfslink_base"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
duckdb = { path = "../duckdb_rs/duckdb-rs/crates/duckdb" }
blake3 = { version = "1.8.2", features = ["mmap"] }
hashbrown = { version = "0.15.4", features = ["rayon"] }
parking_lot = "0.12.4"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
anyhow = "1.0.98"
log = "0.4.20"
serde_json = "1.0.140"
